--- a/tausho/stylesheet.css
+++ b/tausho/stylesheet.css
@@ -2,11 +2,22 @@ body {
     font-family: "sans-serif";
 }
 
-.header {
-    text-align: center;
+header {
     background-color: #ADD;
+}
+
+table {
+    text-align: center;
 }
 
 .footer {
     background-color: #ADD;
+}
+
+th {
+    padding: 0px 20px 0px 0px;
+}
+
+td {
+    padding: 0px 20px 0px 0px;
 }
