--- a/macho/stylesheet.css
+++ b/macho/stylesheet.css
@@ -2,16 +2,43 @@ body {
     font-family: "ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO";
 }
 header {
+    height: 65px;
     background-color: #e1eec1;
     color: black;
 }
+header h1 {
+    font-size: 30px;
+    text-align: center;
+    line-height: 65px;
+}
+.container {
+    max-width: 1170px;
+    padding: 0 20px;
+
+}
+.container span{
+    padding-left: 5px;
+}
+ul{
+    padding: 15px;
+    text-align: center;
+    display: flex;
+    border-bottom: 1px solid #888888;
+}
 li{
     list-style: none;
-    width: calc(100%/3);
+    width: 25%;
 }
-
-ul{
-    padding: 0;
-    display:flex;
-    text-align: center;
+.pls {
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    margin: 10px;
+    color: #888888;
+    background: #d3d3d3;
+    border: #d3d3d3;
+    border-radius: 100%;
+}
+input {
+    font-size: 18px;
 }
