スマホ用レスポンシブデザイン作成

--- a/macho/stylesheet.css
+++ b/macho/stylesheet.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     font-family: "ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","HG丸ｺﾞｼｯｸM-PRO","HGMaruGothicMPRO";
 }
@@ -13,21 +16,37 @@ header h1 {
 }
 .container {
     max-width: 1170px;
+    width: 100%;
     padding: 0 20px;
 
 }
 .container span{
     padding-left: 5px;
 }
-ul{
+ul {
     padding: 15px;
     text-align: center;
     display: flex;
+}
+li {
+    list-style: none;
+
+}
+.title ul{
     border-bottom: 1px solid #888888;
 }
-li{
-    list-style: none;
+.title li{
     width: 25%;
+    font-size: 18px;
+}
+.form ul{
+    border-bottom: 1px solid #888888;
+}
+.form li{
+    width: 25%;
+}
+input[type="text"]{
+    font-size: 20px;
 }
 .pls {
     width: 40px;
@@ -41,4 +60,17 @@ li{
 }
 input {
     font-size: 18px;
+}
+footer {
+    height: 65px;
+    background-color: #e1eec1;
+    color: black;
+}
+footer ul {
+    
+}
+
+footer li {
+    font-size: 20px;
+    width: 25%;
 }
