--- a/tausho/stylesheet.css
+++ b/tausho/stylesheet.css
@@ -1,25 +1,30 @@
 body {
-    font-family:"ヒラギノ丸ゴ Pro W4","ヒラギノ丸ゴ Pro","Hiragino Maru Gothic Pro";
+    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro";
     text-align: center;
-    margin:0px;
+    background-color: rgb(60, 159, 199);
+    margin: 0px;
 }
 
 header {
-    background-color: rgb(32, 141, 184);
-    height:50px;
-    color:rgb(255,255,255);
-    font-size:34px;
+    height: 50px;
+    color: rgb(255, 255, 255);
+    font-size: 34px;
 }
 
-table {
-    margin: auto;
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding :0px 50px;
+    background-color: rgb(227, 247, 255);
 }
 
-th {
-    padding: 0px 10px;
+.main,.displayResult {
+    padding: 0px 30px;
+    background-color :rgb(255, 255, 255);
 }
 
-td {
+th,td {
     padding: 0px 10px;
 }
 
@@ -27,18 +32,16 @@ td {
     width: 100px;
     height: 20px;
     box-shadow: 0 0 8px gray;
-    background-color: rgb(32, 141, 184);;
-    line-height:20px;
-    color:rgb(255,255,255);
-    cursor:hand;
-    cursor:pointer;
-    margin:auto;
+    background-color: rgb(60, 159, 199);
+    line-height: 20px;
+    color: rgb(255, 255, 255);
+    cursor: hand;
+    cursor: pointer;
+    margin: 5px auto;
+    padding: 3px;
 }
 
 .button:hover {
-    background-color: rgb(123, 196, 224);;
-    }
-
-footer p{
-    margin:0px;
+    background-color: rgb(123, 196, 224);
+    ;
 }
