--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,19 @@
 body {
     font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro";
     text-align: center;
-    background-color: rgb(60, 159, 199);
     margin: 0px;
 }
 
 header {
+    background-color: rgb(75, 75, 75);
     height: 50px;
     color: rgb(255, 255, 255);
     font-size: 34px;
+}
+
+ul{
+    list-style:none;
+    padding:0px;
 }
 
 .container {
@@ -16,12 +21,10 @@ header {
     flex-wrap: wrap;
     justify-content: center;
     padding :0px 50px;
-    background-color: rgb(227, 247, 255);
 }
 
 .main,.displayResult {
     padding: 0px 30px;
-    background-color :rgb(255, 255, 255);
 }
 
 th,td {
@@ -44,4 +47,12 @@ th,td {
 .button:hover {
     background-color: rgb(123, 196, 224);
     ;
+}
+
+input[type="number"]{
+    width:7em;
+}
+
+input[type="text"]{
+    width:7em;
 }
