--- a/macho/responsive.css
+++ b/macho/responsive.css
@@ -1,107 +1,77 @@
-    /* タブレット */
-
-@media (max-width: 1000px) {
-    * {
-        box-sizing: border-box;
-    }
-    header h1 {
-        font-size: 28px;
-    }
-    .container {
-        width: 100%;
-    }
-    .title li {
-        font-size: 18px;
-    }
-    input {
-        font-size: 18px;
-    }
-    input[type="text"] {
-        width: 70%;
-    }
-    input[type="radio"] {
-        width: 10%;
-    }
-    .form span {
-        font-size: 18px;
-    }
-    .pls {
-        width: 35px;
-        height: 35px;
-        font-size: 25px;
-    }
-    footer li {
-        font-size: 22px;
-    }
-}
-/* iPad */
-@media (max-width: 768px) {
-    * {
-        box-sizing: border-box;
-    }
-    header h1 {
-        font-size: 25px;
-    }
-    .container {
-        width: 100%;
-    }
-    .title li {
-        font-size: 15px;
-    }
-    input {
-        font-size: 15px;
-    }
-    input[type="text"] {
-        width: 70%;
-    }
-    input[type="radio"] {
-        width: 10%;
-    }
-    .form span {
-        font-size: 15px;
-    }
-    .pls {
-        width: 30px;
-        height: 30px;
-        font-size: 20px;
-    }
-    footer li {
-        font-size: 19px;
-    }
-}
-
 /* iPhoneX */
+
 @media (max-width: 375px) {
     * {
         box-sizing: border-box;
     }
     header h1 {
-        font-size: 25px;
-    }
-    .container {
-        width: 100%;
+        font-size: 18px;
+        text-align: center;
+        line-height: 65px;
     }
     .title li {
-        font-size: 15px;
+        font-size: 11px;
+        width: 20%;
     }
-    input {
-        font-size: 15px;
+    .dlt {
+        display: inline-block;
+        width: 23px;
+        height: 23px;
+        font-size: 18px;
+        margin: 10px;
+    }
+    .form li {
+        display: inline-block;
+        width: 20%;
+    }
+    .en {
+        font-size: 5px;
+        padding-left: 2px;
+    }
+    .sp {
+        display: none;
     }
     input[type="text"] {
-        width: 70%;
+        font-size: 10px;
+        line-height: 15px;
     }
-    input[type="radio"] {
+    .item {
+        width: 80%;
+    }
+    .price {
+        width: 60%;
+    }
+    .taxRate span {
+        font-size: 5px;
+    }
+    .tax {
         width: 10%;
     }
-    .form span {
-        font-size: 10px;
+    .priceIncludingTax {
+        width: 60%;
+    }
+    .quantity {
+        width: 50%;
+        height: 20px;
     }
     .pls {
-        width: 30px;
-        height: 30px;
-        font-size: 20px;
+        width: 23px;
+        height: 23px;
+        font-size: 18px;
+        margin-left: 15px;
     }
-    footer li {
-        font-size: 19px;
+    footer {
+        height: 65px;
+        text-align: center;
+        background-color: #e1eec1;
+        color: black;
+    }
+    .sum {
+        display: inline-block;
+        font-size: 15px;
+        margin: 10px;
+    }
+    .result {
+        font-size: 30px;
     }
 }
