--- a/macho/stylesheet.css
+++ b/macho/stylesheet.css
@@ -60,6 +60,10 @@ li {
     border-radius: 100%;
 }
 
+.dlt:hover {
+    background: rgb(247, 94, 77);
+}
+
 .form {
     border-bottom: 1px solid #888888;
 }
@@ -96,6 +100,7 @@ input[type="text"] {
 }
 
 .quantity {
+    font-size: 10px;
     width: 30%;
     height: 40px;
 }
@@ -109,6 +114,10 @@ input[type="text"] {
     margin: 10px;
     border: #d3d3d3;
     border-radius: 100%;
+}
+
+.pls:hover {
+    background: #8d8d8d;
 }
 
 footer {
