--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,58 +1,130 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro";
-    text-align: center;
-    margin: 0px;
+    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
 }
 
 header {
-    background-color: rgb(75, 75, 75);
-    height: 50px;
-    color: rgb(255, 255, 255);
-    font-size: 34px;
+    height: 65px;
+    background-color: #e1eec1;
+    color: black;
 }
 
-ul{
-    list-style:none;
-    padding:0px;
+header h1 {
+    font-size: 33px;
+    text-align: center;
+    line-height: 65px;
 }
 
 .container {
+    max-width: 1170px;
+    width: 100%;
+    padding: 0 20px;
+    margin: auto;
+}
+
+ul {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding :0px 50px;
+    text-align: center;
 }
 
-.main,.displayResult {
-    padding: 0px 30px;
+li {
+    list-style: none;
 }
 
-th,td {
-    padding: 0px 10px;
+.title {
+    border-bottom: 1px solid #888888;
 }
 
-.button {
-    width: 100px;
-    height: 20px;
-    box-shadow: 0 0 8px gray;
-    background-color: rgb(60, 159, 199);
-    line-height: 20px;
-    color: rgb(255, 255, 255);
-    cursor: hand;
-    cursor: pointer;
-    margin: 5px auto;
-    padding: 3px;
+.title ul {
+    padding: 0;
 }
 
-.button:hover {
-    background-color: rgb(123, 196, 224);
-    ;
+.title li {
+    font-size: 20px;
+    width: 20%;
 }
 
-input[type="number"]{
-    width:7em;
+.dlt {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    color: white;
+    margin: 10px;
+    transition: all 2s;
+    background: rgb(252, 145, 133);
+    border: rgb(252, 145, 133);
+    border-radius: 100%;
 }
 
-input[type="text"]{
-    width:7em;
+.form {
+    border-bottom: 1px solid #888888;
+}
+
+.form ul {
+    padding: 0;
+}
+
+.form li {
+    display: inline-block;
+    width: 20%;
+}
+
+.en {
+    font-size: 18px;
+    padding-left: 5px;
+}
+
+.sp {
+    display: none;
+}
+
+input[type="text"] {
+    font-size: 15px;
+    line-height: 35px;
+}
+
+.price {
+    width: 70%;
+}
+
+.priceIncludingTax {
+    width: 70%;
+}
+
+.quantity {
+    font-size: 10px;
+    width: 30%;
+    height: 40px;
+}
+
+.pls {
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    color: #888888;
+    background: #d3d3d3;
+    margin: 10px;
+    border: #d3d3d3;
+    border-radius: 100%;
+}
+
+footer {
+    height: 65px;
+    text-align: center;
+    background-color: #e1eec1;
+    color: black;
+}
+
+.sum {
+    display: inline-block;
+    font-size: 23px;
+    margin: 10px;
+}
+
+.result {
+    font-size: 30px;
 }
