--- a/tausho/stylesheet.css
+++ b/tausho/stylesheet.css
@@ -16,15 +16,8 @@ ul{
     padding:0px;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding :0px 50px;
-}
-
-.main,.displayResult {
-    padding: 0px 30px;
+table{
+    margin:auto;
 }
 
 th,td {
