--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,58 +1,65 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro";
-    text-align: center;
     margin: 0px;
+}
+
+.container {
+    font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro", "Hiragino Maru Gothic Pro";
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    text-align: center;
 }
 
 header {
     background-color: rgb(75, 75, 75);
-    height: 50px;
     color: rgb(255, 255, 255);
-    font-size: 34px;
+    width: 100%;
 }
 
-ul{
-    list-style:none;
-    padding:0px;
+h1 {
+    font-size: 30px;
+    margin: 0px;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding :0px 50px;
+table {
+    margin: auto;
+    white-space: nowrap;
 }
 
-.main,.displayResult {
-    padding: 0px 30px;
-}
-
-th,td {
+th, td {
     padding: 0px 10px;
 }
 
-.button {
-    width: 100px;
-    height: 20px;
-    box-shadow: 0 0 8px gray;
-    background-color: rgb(60, 159, 199);
-    line-height: 20px;
+
+.taxRadio {
+    display: block;
+    text-align: left;
+}
+
+.name, .price {
+    width: 5em;
+}
+
+.quantity {
+    width: 3em;
+}
+
+h2, p {
+    margin: 0px;
+}
+
+footer {
+    background-color: rgb(75, 75, 75);
     color: rgb(255, 255, 255);
-    cursor: hand;
-    cursor: pointer;
-    margin: 5px auto;
-    padding: 3px;
-}
-
-.button:hover {
-    background-color: rgb(123, 196, 224);
-    ;
-}
-
-input[type="number"]{
-    width:7em;
-}
-
-input[type="text"]{
-    width:7em;
+    width: 100%;
+    margin-top: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10px 60px 10px;
 }
