金額入力フォームをtelに変更

--- a/macho/stylesheet.css
+++ b/macho/stylesheet.css
@@ -62,6 +62,7 @@ li {
 
 .form {
     border-bottom: 1px solid #888888;
+    vertical-align: middle;
 }
 
 .form ul {
@@ -87,7 +88,7 @@ input[type="text"] {
     line-height: 40px;
 
 }
-input[type="number"] {
+input[type="tel"] {
     font-size: 20px;
     line-height: 40px;
     text-align: right;
@@ -134,4 +135,5 @@ footer {
 
 .result {
     font-size: 30px;
+    text-align: right;
 }
