--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,12 +63,16 @@ th, td {
 .btn {
     display: inline-block;
     text-decoration: none;
+    border: none;
+	outline: none;
+	appearance: none;
     background: #003772;
     color: #FFF;
+    padding: 0px;
     border-radius: 50%;
     text-align: center;
     overflow: hidden;
-    transition: .4s;
+    vertical-align: middle;
 }
 
 .btn:hover {
@@ -78,7 +82,7 @@ th, td {
 .add {
     width: 40px;
     height: 40px;
-    line-height: 40px;
+    line-height: 43px;
     font-size: 30px;
     margin:10px 0px
 }
@@ -87,8 +91,7 @@ th, td {
 .delete {
     width: 20px;
     height: 20px;
-    line-height: 20px;
-    vertical-align: middle;
+    line-height: 22px;
 }
 
 
