--- a/tausho/stylesheet.css
+++ b/tausho/stylesheet.css
@@ -42,6 +42,7 @@ th, td {
     display: block;
     text-align: left;
 }
+    
 
 .name {
     width: 5em;
@@ -49,14 +50,6 @@ th, td {
 
 .price {
     width: 5em;
-}
-
-.quantity {
-    width: 3em;
-}
-
-.unit {
-    padding-left: 5px;
 }
 
 
@@ -77,15 +70,28 @@ th, td {
 }
 
 .add {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    font-size: 30px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 20px;
     margin:10px 0px
 }
 
 
 .delete {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+.increment {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+}
+
+.decrement {
     width: 20px;
     height: 20px;
     line-height: 20px;
