--- a/tausho/stylesheet.css
+++ b/tausho/stylesheet.css
@@ -33,7 +33,7 @@ table {
 }
 
 th, td {
-    padding: 0px 10px;
+    padding: 0px,3px;
     border-bottom: 1px solid rgb(177, 177, 177);
 }
 
@@ -49,7 +49,11 @@ th, td {
 }
 
 .price {
-    width: 5em;
+    width: 4em;
+}
+
+.discountRate{
+    width: 2em;
 }
 
 
@@ -107,8 +111,11 @@ footer {
     color: rgb(255, 255, 255);
     width: 100%;
     margin-top: auto;
+    padding: 0px 10px 250px 10px;
+}
+
+.sum{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0px 10px 250px 10px;
 }
