--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,6 +56,14 @@ th, td {
     width: 3em;
 }
 
+button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    appearance: none;
+}
 
 .btn {
     display: inline-block;
